--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,71 +1,4 @@
 /*****
-  FONTS
-  *****/
-
-@font-face {
-  font-family: 'BetterFly';
-  src: url('../fonts/betterfly-draft-webfont.eot');
-  src: url('../fonts/betterfly-draft-webfont.woff2') format('woff2'),
-    url('../fonts/betterfly-draft-webfont.woff') format('woff'),
-    url('../fonts/betterfly-draft-webfont.svg') format('svg');
-}
-
-@font-face {
-  font-family: 'BFNarrow';
-  src: url('../fonts/betterfly-narrow-webfont.eot');
-  src: url('../fonts/betterfly-narrow-webfont.woff2") format('woff2'),
-  url('../fonts/betterfly-narrow-webfont.woff") format('woff');
-}
-
-@font-face {
-  font-family: 'Crimson Text';
-  font-style: italic;
-  font-weight: 400;
-  src: local("Crimson Text Italic"), local("CrimsonText-Italic"),
-    url("https://fonts.gstatic.com/s/crimsontext/v8/wlpogwHKFkZgtmSR3NB0oRJfajhRK_Z_3rhH.woff2")
-      format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
-    U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
-    U+FEFF, U+FFFD;
-}
-
-@font-face {
-  font-family: 'Crimson Text';
-  font-style: italic;
-  font-weight: 700;
-  src: local("Crimson Text Bold Italic"), local("CrimsonText-BoldItalic"),
-    url("https://fonts.gstatic.com/s/crimsontext/v8/wlprgwHKFkZgtmSR3NB0oRJfajDqDuNS_LVtfaKv.woff2")
-      format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
-    U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
-    U+FEFF, U+FFFD;
-}
-
-@font-face {
-  font-family: 'Crimson Text';
-  font-style: normal;
-  font-weight: 400;
-  src: local("Crimson Text Regular"), local("CrimsonText-Regular"),
-    url("https://fonts.gstatic.com/s/crimsontext/v8/wlp2gwHKFkZgtmSR3NB0oRJfbwhTIfFd3A.woff2")
-      format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
-    U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
-    U+FEFF, U+FFFD;
-}
-
-@font-face {
-  font-family: 'Crimson Text';
-  font-style: normal;
-  font-weight: 700;
-  src: local("Crimson Text Bold"), local("CrimsonText-Bold"),
-    url("https://fonts.gstatic.com/s/crimsontext/v8/wlppgwHKFkZgtmSR3NB0oRJX1C1GDNNQ9rJPfw.woff2")
-      format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
-    U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
-    U+FEFF, U+FFFD;
-}
-
-/*****
 Colors & Breakpoints
 *****/
 
@@ -77,8 +10,8 @@ Colors & Breakpoints
   --pop-color: hsl(128, 100%, 80%); /* #990A02 */
   --pop-light: hsl(3, 80%, 41%);
 
-  --ff-title: 'BFNarrow', sans-serif;
-  --ff-serif: 'Crimson Text', serif;
+  --ff-title: "BFNarrow", sans-serif;
+  --ff-serif: "Crimson Text", serif;
 
   /* Breakpoints */
   --break-small: 37.5em;
@@ -136,16 +69,22 @@ Colors & Breakpoints
 
 html {
   box-sizing: border-box;
-  font-family: 'Crimson Text', serif;
+  font-family: "Crimson Text", serif;
   color: var(--black);
   font-size: 1.25rem;
 }
 
 h1 {
-  font-family: 'BetterFly', sans-serif;
+  font-family: "BetterFly", sans-serif;
   font-size: 40px;
 
   text-align: center;
+}
+
+h1 a {
+  text-decoration: none;
+
+  color: black;
 }
 
 /* Navigation */
@@ -422,4 +361,71 @@ ul.nav-foot {
     margin: 10px 1em;
     flex: 0 1 45%;
   }
+}
+
+/*****
+  FONTS
+  *****/
+
+@font-face {
+  font-family: "BetterFly";
+  src: url("../fonts/betterfly-draft-webfont.eot");
+  src: url("../fonts/betterfly-draft-webfont.woff2") format("woff2"),
+    url("../fonts/betterfly-draft-webfont.woff") format("woff"),
+    url("../fonts/betterfly-draft-webfont.svg") format("svg");
+}
+
+@font-face {
+  font-family: "BFNarrow";
+  src: url("../fonts/betterfly-narrow-webfont.eot");
+  src: url("../fonts/betterfly-narrow-webfont.woff2") format("woff2"),
+    url("../fonts/betterfly-narrow-webfont.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Crimson Text";
+  font-style: italic;
+  font-weight: 400;
+  src: local("Crimson Text Italic"), local("CrimsonText-Italic"),
+    url("https://fonts.gstatic.com/s/crimsontext/v8/wlpogwHKFkZgtmSR3NB0oRJfajhRK_Z_3rhH.woff2")
+      format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+    U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
+    U+FEFF, U+FFFD;
+}
+
+@font-face {
+  font-family: "Crimson Text";
+  font-style: italic;
+  font-weight: 700;
+  src: local("Crimson Text Bold Italic"), local("CrimsonText-BoldItalic"),
+    url("https://fonts.gstatic.com/s/crimsontext/v8/wlprgwHKFkZgtmSR3NB0oRJfajDqDuNS_LVtfaKv.woff2")
+      format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+    U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
+    U+FEFF, U+FFFD;
+}
+
+@font-face {
+  font-family: "Crimson Text";
+  font-style: normal;
+  font-weight: 400;
+  src: local("Crimson Text Regular"), local("CrimsonText-Regular"),
+    url("https://fonts.gstatic.com/s/crimsontext/v8/wlp2gwHKFkZgtmSR3NB0oRJfbwhTIfFd3A.woff2")
+      format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+    U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
+    U+FEFF, U+FFFD;
+}
+
+@font-face {
+  font-family: "Crimson Text";
+  font-style: normal;
+  font-weight: 700;
+  src: local("Crimson Text Bold"), local("CrimsonText-Bold"),
+    url("https://fonts.gstatic.com/s/crimsontext/v8/wlppgwHKFkZgtmSR3NB0oRJX1C1GDNNQ9rJPfw.woff2")
+      format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+    U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
+    U+FEFF, U+FFFD;
 }
